# fenicsx_cosim

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  HPC_SLURM_GUIDE.md  LICENSE  README.md  ROADMAP.md  Tasks.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
benchmarks/: README.md  _harness.py  bench_fe2_homogenization.py  bench_implicit_coupling.py  bench_mapping_accuracy.py
docker/: .dockerignore  Dockerfile  README.md  prepare_docker_context.sh
docs/: HPC_SLURM_GUIDE.md  comparison_precice.md  conf.py  fe2_design.md  index.rst  modules.rst
examples/: abaqus_coupling_wrapper.py  amr_mechanical_solver.py  amr_thermal_solver.py  fe2_macro_solver.py  fe2_micro_worker.py  fenicsx_abaqus_thermal.py  fenicsx_kratos_mechanical.py  kratos_thermal_solver.py  mechanical_solver.py  run_all.sh  run_amr.sh  run_basic.sh  run_fe2.sh  run_shakedown.sh  run_thermomech.sh  shakedown_fenicsx_master.py  shakedown_optimizer_worker.py  thermal_solver.py  three_way_broker.py
tests/: __init__.py  _kratos_load_check.py  test_abaqus_adapter.py  test_benchmarks.py  test_broker_communicator.py  test_communicator.py  test_coupling_interface.py  test_data_mapper.py  test_dynamic_mapper.py  test_fe2_e2e.py  test_fe2_macro.py  test_fe2_pool.py  test_fe2_rve.py  test_interop_dolfinx.py  test_interop_material.py  test_interop_mdpa.py  test_kratos_adapter.py  test_kratos_adapter_real.py  test_kratos_load.py  test_mesh_extractor.py  test_quad.py  test_quadrature_extractor.py  test_scatter_gather_communicator.py  test_thermomech.py
(+74 files in other folders)
